@@ -1,5 +1,6 @@
 0.8.1+
-
+    fix --enable-hal build issues (affected 0.7.6 thru 0.8.1)
+    overwrite dialog replace text view with labels
 0.8.1   2012-10-21:
     added task manager queue/pause #147
     disable task manager find
